tests/suite/fail/generated/borrow/fail_move_store_value.ny
fn store(x: string) -> void { print(x) }
fn main() {
    let value = "hello"
    store(value)
    print(value) //~ ERROR was moved
}
